--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "16.6.3",
     "react-native": "0.58.5",
     "react-native-linear-gradient": "^2.5.3",
+    "react-native-shadow": "^1.2.2",
+    "react-native-svg": "^9.2.4",
     "react-native-text-gradient": "0.0.16"
   },
   "devDependencies": {
