--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.8.4",
     "react": "16.6.3",
     "react-native": "0.58.5",
     "react-native-firebase": "^5.2.2",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-shadow": "^1.2.2",
     "react-native-svg": "^9.2.4",
-    "react-native-text-gradient": "0.0.16"
+    "react-native-text-gradient": "0.0.16",
     "react-redux": "^6.0.1",
     "redux-form": "^8.1.0"
-
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
